--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 # Mysql 注意替换相应配置
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/xunwu
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/crm
 spring.datasource.username=root
 spring.datasource.password=zxc123
 
@@ -11,23 +11,8 @@ spring.redis.port=6379
 spring.redis.pool.min-idle=1
 spring.redis.timeout=3000
 
+# 保证真的正常打印出sql来
 logging.level.org.hibernate.SQL=debug
 
-# thymeleaf
+# thymeleaf 防止缓存
 spring.thymeleaf.cache=false
-
-# multipart config
-spring.http.multipart.enabled=true
-spring.http.multipart.location=/tmp/xunwu/images/
-spring.http.multipart.file-size-threshold=5MB
-spring.http.multipart.max-request-size=20MB
-
-# kafka
-spring.kafka.bootstrap-servers=127.0.0.1:9092
-spring.kafka.consumer.group-id=xunwu
-
-logging.level.cn.ctoedu.service.search=debug
-
-elasticsearch.cluster.name=xunwu
-elasticsearch.host=127.0.0.1
-elasticsearch.port=9300
